Structures have been created for the home page

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://apis.google.com/js/api.js?key=AIzaSyDVneSG5q1L0CLnmMgQ9UltC--CBS-i3Zs"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Etkinlik365</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
